@@ -1,0 +1,20 @@
+Test Clean Spaces
+=================
+
+**************************
+This is a Sidebar block.
+This is a Sidebar block.
+
+  This is a Sidebar block.
+  This is a Sidebar block.
+
+  - This is a Sidebar block.
+    This is a Sidebar block.
+**************************
+
+<pathspec>...::
+	Files to add content from.  Fileglobs (e.g. `*.c`) can
+	be given to add all matching files.
+
+Some paragraph text. Some paragraph text. Some paragraph text.
+Some paragraph text. Some paragraph text. Some paragraph text.
