@@ -1,0 +1,16 @@
+TEST CLEAN SPACES
+=================
+
+**************************
+THIS IS A SIDEBAR BLOCK. THIS IS A SIDEBAR BLOCK.
+
+  THIS IS A SIDEBAR BLOCK.
+  THIS IS A SIDEBAR BLOCK.
+
+  - THIS IS A SIDEBAR BLOCK. THIS IS A SIDEBAR BLOCK.
+**************************
+
+<PATHSPEC>...::
+	FILES TO ADD CONTENT FROM. FILEGLOBS (E.G. `*.C`) CAN BE GIVEN TO ADD ALL MATCHING FILES.
+
+SOME PARAGRAPH TEXT. SOME PARAGRAPH TEXT. SOME PARAGRAPH TEXT. SOME PARAGRAPH TEXT. SOME PARAGRAPH TEXT. SOME PARAGRAPH TEXT.
