@@ -8,6 +8,10 @@ __   __/ _ \|___  / |
  \ V /| |_| | / / | |
   \_/  \___(_)_/  |_|             (not released yet)
 
+Asciidoc:
+ * Support a cleanspaces option to remove extra spaces in wrapped lines
+   (GitHub's #464). Thanks Jean-Noël Avila for the pull request.
+
 =======================================================================
         ___  _____ ___
 __   __/ _ \|___  / _ \
